Deloyment/alb-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  namespace: hoangvm
spec:
  controller: ingress.k8s.aws/alb
