Deloyment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoangvm-rice-app
  namespace: hoangvm
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rice-store
  template:
    metadata:
      labels:
        app: rice-store
    spec:
      serviceAccountName: rice-sa
      containers:
        - name: rice-app
          image: 164693826317.dkr.ecr.ap-southeast-1.amazonaws.com/hoangvm-rice-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: hoangvm-rice-service
  namespace: hoangvm
spec:
  type: ClusterIP
  selector:
    app: rice-store
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
