Deloyment/ingress.yaml
apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoangvm-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0b33c0ccbb3b5cd5c, subnet-0fa85b6cf43bd3b7d
    argocd.argoproj.io/sync-wave: "3"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoangvm-rice-service
                port:
                  number: 80
